# backend/api.yaml
@@ -197,6 +197,37 @@ paths:
         '404':
           description: Not Found
 
+#Generate qrcode
+  /qr/create:
+    post:
+      tags:
+        - qrcode
+      summary: 
+        - generate qrcode for short url
+      parameters:
+        - name: 'id'
+          in: 'path'
+          description: 'id'
+          required: true
+          type: 'string'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  QrCode:
+                    type: string
+                    format: binary 
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+
 components:
   securitySchemes:
     bearerAuth:
@@ -344,3 +375,9 @@ components:
           type: array
           items:
             type: string
+
+    GenerateQrCodeDto:
+      type: object
+      properties:
+        shortUrl:
+          type: string
